--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   "dependencies": {
     "express": "^4.7.2",
     "express3-handlebars": "^0.5.0"
+  },
+  "devDependencies": {
+    "chai": "^1.9.1",
+    "grunt": "^0.4.5",
+    "grunt-cafe-mocha": "^0.1.12",
+    "grunt-contrib-jshint": "^0.10.0",
+    "mocha": "^1.21.3"
   }
 }
