--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.6.1",
     "express": "^4.7.2",
-    "express3-handlebars": "^0.5.0"
+    "express3-handlebars": "^0.5.0",
+    "formidable": "^1.0.15",
+    "jquery-file-upload-middleware": "^0.1.5"
   },
   "devDependencies": {
     "chai": "^1.9.1",
