--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.6.1",
+    "cookie-parser": "^1.3.2",
     "express": "^4.7.2",
+    "express-session": "^1.7.4",
     "express3-handlebars": "^0.5.0",
     "formidable": "^1.0.15",
-    "jquery-file-upload-middleware": "^0.1.5"
+    "jquery-file-upload-middleware": "^0.1.5",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "chai": "^1.9.1",
